Resolve "No ball identification result if boundary is hit"
Closes #2093

See merge request main/Sumatra!2036

sumatra-commit: e386c241d7ae4c5addf0d29508c7fccea18a2b30